[package]
name = "todo"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
colored = "2.0.0"
cursive = { version = "0.20.0", default-features =  false, features = ["crossterm-backend"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
